--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla e-shop</title>
 
-    <link rel="stylesheet" href="js/carrossel/css.css" />
+    <link rel="stylesheet" href="js/carousel/css.css" />
     <link rel="stylesheet" href="css.css" />
   </head>
   <body>
     <div id="app"></div>
 
-    <script src="js/carrossel/index.js"></script>
+    <script src="js/carousel/index.js"></script>
     <script src="js/store.js"></script>
     <script src="js/js.js"></script>
   </body>
