--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <title>Vanilla e-shop</title>
 
     <link rel="stylesheet" href="js/carousel/css.css" />
+    <link rel="stylesheet" href="js/modal/css.css" />
     <link rel="stylesheet" href="css.css" />
   </head>
   <body>
     <div id="app"></div>
 
     <script src="js/carousel/index.js"></script>
+    <script src="js/modal/js.js"></script>
     <script src="js/store.js"></script>
+    <script src="js/events.js"></script>
     <script src="js/js.js"></script>
   </body>
 </html>
