--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div id="app"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/carousel/index.js"></script>
     <script src="js/modal/js.js"></script>
     <script src="js/store.js"></script>
